--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "celebrate": "^15.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^19.0.0",
     "eslint-plugin-import": "^2.25.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12",
-    "validator": "^13.7.0"
+    "mongoose": "^6.0.12"
   }
 }
