--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "eslint-config-airbnb": "^19.0.0",
     "eslint-plugin-import": "^2.25.3",
     "express": "^4.17.1",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "winston": "^3.3.3"
   }
 }
